--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "My Chrome Extension",
+  "name": "Outpicker",
   "version": "1.0",
-  "description": "A simple Chrome extension tutorial.",
-  "permissions": ["storage", "alarms"],
+  "description": "Outpicker is a Google Chrome extension designed to simplify your daily outfit selection process.",
+  "permissions": ["storage", "activeTab", "scripting"],
   "background": {
     "service_worker": "background.js"
   },
@@ -20,10 +20,15 @@
     "48": "images/icon.png",
     "128": "images/icon.png"
   },
+  "commands": {},
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
       "js": ["content.js"]
     }
+  ],
+  "host_permissions": [
+    "https://*.google.com/*",
+    "https://*.googleusercontent.com/*"
   ]
 }
