--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
   "version": "1.0",
   "description": "Outpicker is a Google Chrome extension designed to simplify your daily outfit selection process.",
   "permissions": ["tabs", "storage", "scripting"],
+  "icons": { "128": "images/icon.png" },
   "background": {
     "service_worker": "background.js"
   },
